replace unmodifiable collections in MutableCapabilities.java